--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
           <artifactId>gson</artifactId>
           <version>2.8.1</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+      <dependency>
+          <groupId>io.github.bonigarcia</groupId>
+          <artifactId>webdrivermanager</artifactId>
+          <version>5.8.0</version>
+      </dependency>
   </dependencies>
 
   <build>
